# defunc

./: README.md  defunc.opam  dune-project
lib/: dune  section11.ml  section12.ml  section21.ml  section22.ml  section23.ml  section3.ml  section41.ml  section42.ml
